--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -5,10 +5,12 @@
 name: Deploy docker image to GHCR
 
 on:
-  # Runs on pushes targeting the default branch
+  # Runs on pull request targeting the default branch
   push:
     branches: ["main"]
-
+  pull_request:
+    branches: ["main"]
+      
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
